--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IITD Weekly Timetable - Aman</title>
+  <title>IITD Weekly Timetable - Group 31</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -118,61 +118,52 @@
     💬 Connect with me for suggestions and improvements via Instagram. Just tap the floating badge below! 😄
   </div>
 
-  <!-- Monday -->
   <div class="day">
     <h2>Monday</h2>
-    <div class="slot"><p><strong>PYL Lecture</strong></p><p>08:00–09:00 @ LH526</p></div>
-    <div class="slot"><p><strong>PYL Tutorial</strong></p><p>13:00–14:00 @ LH413.5</p></div>
-    <div class="slot"><p><strong>MTL Tutorial</strong></p><p>14:00–15:00 @ LH413.2</p></div>
-    <div class="slot"><p><strong>ELL Lecture</strong></p><p>16:00–17:00 @ LH108</p></div>
+    <div class="slot"><p><strong>PYL1001 Lecture</strong></p><p>08:00–09:00 @ LH512</p></div>
+    <div class="slot"><p><strong>PYL1001 Tutorial</strong></p><p>13:00–14:00 @ LH413.4</p></div>
+    <div class="slot"><p><strong>MTL1001 Tutorial</strong></p><p>14:00–15:00 @ LH413.1</p></div>
+    <div class="slot"><p><strong>ELL1000 Lecture</strong></p><p>16:00–17:00 @ LH108</p></div>
   </div>
 
-  <!-- Tuesday -->
   <div class="day">
     <h2>Tuesday</h2>
     <div class="col-note">
       🧪 For PYP lab partners and experiment details, check <a href="https://drive.google.com/file/d/1TlUI-phanCXjBVWLtfaYhQMjyF4xha2t/view?usp=sharing" target="_blank">this PDF</a>.
     </div>
-    <div class="slot"><p><strong>PYP Lab</strong></p><p>09:00–13:00 @ LH302</p><p> For Weekwise Experiment and Set Allotment see above PDF </p></div>
+    <div class="slot"><p><strong>PYP Lab</strong></p><p>09:00–13:00 @ LH302</p></div>
     <div class="col-note">
       📌 For COL lectures and lab instructions, refer to <a href="https://drive.google.com/file/d/132xA2cbVBAoJzBbj5T3kQKYA0sR-5jyN/view?usp=sharing" target="_blank">this PDF</a>.
     </div>
-    <div class="slot"><p><strong>COL Lecture (for me guys, check yours in PDF)</strong></p><p>15:00–16:00 @ LH108</p></div>
-    <div class="slot"><p><strong>MTL</strong></p><p>16:00–17:00 @ LH310</p></div>
+    <div class="slot"><p><strong>COL1000 Lecture</strong></p><p>15:00–16:00 @ LH114</p></div>
+    <div class="slot"><p><strong>MTL1001 Lecture</strong></p><p>16:00–17:00 @ LH308</p></div>
   </div>
 
-  <!-- Wednesday -->
   <div class="day">
     <h2>Wednesday</h2>
-    <div class="slot"><p><strong>ELL Lab</strong></p><p>09:00–11:00 @ LH402</p></div>
-    <div class="slot"><p><strong>DAN1100 Life Skills</strong></p><p>11:00–13:00 @ IV LT1, IV LT2 (Tentative)</p></div>
+    <div class="slot"><p><strong>ELL1000 Lab</strong></p><p>09:00–11:00 @ LH402</p></div>
+    <div class="slot"><p><strong>DAN1100 Life Skills</strong></p><p>11:00–12:00 @ IV LT1, IV LT2 (Tentative)</p></div>
     <div class="dan-note">📨 Please follow Life Skills schedule as per respective mails.</div>
     <div class="col-note">📌 For COL lectures and lab instructions, refer to <a href="https://drive.google.com/file/d/132xA2cbVBAoJzBbj5T3kQKYA0sR-5jyN/view?usp=sharing" target="_blank">this PDF</a>.</div>
-    <div class="slot"><p><strong>COL Lecture (for me guys, check yours in PDF)</strong></p><p>15:00–16:00 @ LH108</p></div>
-    <div class="slot"><p><strong>MTL</strong></p><p>16:00–17:00 @ LH310</p></div>
+    <div class="slot"><p><strong>COL1000 Lecture</strong></p><p>15:00–16:00 @ LH114</p></div>
+    <div class="slot"><p><strong>MTL1001 Lecture</strong></p><p>16:00–17:00 @ LH308</p></div>
   </div>
 
-  <!-- Thursday -->
   <div class="day">
     <h2>Thursday</h2>
-    <div class="slot"><p><strong>PYL1001 (III)</strong></p><p>08:00–09:00 @ LH526</p></div>
-    <div class="slot"><p><strong>DAN10XX - LANGUAGE</strong></p><p>11:00–13:00 @ LH413.3, LH537 A/B</p></div>
-    <div class="dan-note">📨 Please follow Language course schedule as per respective mails.</div>
-    <div class="slot"><p><strong>ELL1000 (I)</strong></p><p>16:00–17:00 @ LH108</p></div>
+    <div class="slot"><p><strong>PYL1001 Lecture</strong></p><p>08:00–09:00 @ LH512</p></div>
+    <div class="slot"><p><strong>ELL1000 Lecture</strong></p><p>16:00–17:00 @ LH108</p></div>
   </div>
 
-  <!-- Friday -->
   <div class="day">
     <h2>Friday</h2>
     <div class="col-note">📌 For COL lectures and lab instructions, refer to <a href="https://drive.google.com/file/d/132xA2cbVBAoJzBbj5T3kQKYA0sR-5jyN/view?usp=sharing" target="_blank">this PDF</a>.</div>
-    <div class="slot"><p><strong>COL1000 Lab (for me guys, check yours in PDF)</strong></p><p>09:00–11:00 @ LH504</p></div>
-    <div class="slot"><p><strong>ELL Tutorial</strong></p><p>14:00–15:00 @ LH606</p></div>
-    <div class="col-note">📌 For COL lectures and lab instructions, refer to <a href="https://drive.google.com/file/d/132xA2cbVBAoJzBbj5T3kQKYA0sR-5jyN/view?usp=sharing" target="_blank">this PDF</a>.</div>
-    <div class="slot"><p><strong>COL1000 Lecture (for me guys, check yours in PDF)</strong></p><p>15:00–16:00 @ LH108</p></div>
-    <div class="slot"><p><strong>MTL</strong></p><p>16:00–17:00 @ LH310</p></div>
+    <div class="slot"><p><strong>COL1000 Lab</strong></p><p>09:00–11:00 @ LH503</p></div>
+    <div class="slot"><p><strong>ELL1000 Tutorial</strong></p><p>14:00–15:00 @ LH606</p></div>
+    <div class="slot"><p><strong>COL1000 Lecture</strong></p><p>15:00–16:00 @ LH114</p></div>
+    <div class="slot"><p><strong>MTL1001 Lecture</strong></p><p>16:00–17:00 @ LH308</p></div>
   </div>
 
-  <!-- Notes Section -->
   <div class="notes-section" style="max-width: 700px; margin: 40px auto; padding: 15px; background: #fff8dc; border-left: 5px solid #ffa500; box-shadow: 0 0 10px rgba(0,0,0,0.05); font-size: 0.95rem;">
     <h2 style="margin-top: 0; color: #ffa500;">📝 Notes</h2>
     <ul style="margin: 0; padding-left: 20px; line-height: 1.6;">
@@ -181,8 +172,7 @@
     </ul>
   </div>
 
-  <!-- Important Links Section -->
-<div class="important-links" style="max-width: 700px; margin: 40px auto; padding: 15px; background: #f0f8ff; border-left: 5px solid #0077cc; box-shadow: 0 0 10px rgba(0,0,0,0.05); font-size: 0.95rem;">
+  <div class="important-links" style="max-width: 700px; margin: 40px auto; padding: 15px; background: #f0f8ff; border-left: 5px solid #0077cc; box-shadow: 0 0 10px rgba(0,0,0,0.05); font-size: 0.95rem;">
   <h2 style="margin-top: 0; color: #0077cc;">🔗 Important Links</h2>
   <ul style="margin: 0; padding-left: 20px; line-height: 1.6;">
     <li><a href="https://moodle.iitd.ac.in/" target="_blank">📚 Moodle (Old)</a></li>
@@ -191,7 +181,7 @@
     <li><a href="https://webmail.iitd.ac.in/roundcube/" target="_blank">📧 IITD Webmail</a></li>
     <li><a href="https://chat.openai.com" target="_blank">🤖 ChatGPT</a></li>
     <li><a href="https://drive.google.com/drive/folders/1WTo20vNv3ZDBANJP_F8p-nEAgz8xYMKW?usp=sharing" target="_blank">🧪 PYP Lab Materials</a></li>
-    <li><a href="https://app.acadly.com/home" target="_blank">📅 Acadly</a></li>
+    <li><a href="https://app.acadly.com/" target="_blank">📅 Acadly</a></li>
     <li><a href="https://www.gradescope.com/" target="_blank">📝 Gradescope</a></li>
     <li><a href="https://csc.iitd.ac.in/howto" target="_blank">💻 CSC IITD How-To</a></li>
     <li><a href="https://home.iitd.ac.in/" target="_blank">🏛️ IIT Delhi Official Website</a></li>
@@ -200,12 +190,11 @@
 
 
   <footer>
-    <p>&copy; 2025 Aman Balara &mdash; All Rights Reserved.</p>
+    <p>&copy; 2025 Vipul Bishnoi &mdash; All Rights Reserved.</p>
     <p>Designed with precision and purpose at <strong>IIT Delhi</strong>.</p>
   </footer>
 
-  <!-- Floating Insta Badge -->
-  <a href="https://instagram.com/aman_balara" target="_blank" class="insta-badge" title="Follow @aman_balara on Instagram">
+  <a href="https://instagram.com/vipulbishnoi_17" target="_blank" class="insta-badge" title="Follow @vipulbishnoi_17 on Instagram">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
   </a>
 
