--- a/Index2.html
+++ b/Index2.html
@@ -166,7 +166,7 @@
       <div class="note">🧪 Remember to check PYP lab partners and experiment details.</div>
       <div class="slot"><p>PYP Lab</p><p>09:00–13:00 @ LH302</p></div>
       <div class="note">📌 Check PDF for COL1000 lecture and lab instructions.</div>
-      <div class="slot"><p>COL1000 Lecture</p><p>15:00–16:00 @ LH108</p></div>
+      <div class="slot"><p>COL1000 Lecture</p><p>15:00–16:00 @ LH108 (This is for me guys, check your in given pdf)</p></div>
       <div class="slot"><p>MTL1001 Lecture</p><p>16:00–17:00 @ LH308</p></div>
     </div>
 
@@ -175,7 +175,7 @@
       <div class="slot"><p>ELL1000 Lab</p><p>09:00–11:00 @ LH402</p></div>
       <div class="slot"><p>DAN1100 Life Skills</p><p>11:00–12:00 @ IV LT1, IV LT2 (Tentative)</p></div>
       <div class="note">📨 Follow Life Skills schedule as per respective mails.</div>
-      <div class="slot"><p>COL1000 Lecture</p><p>15:00–16:00 @ LH108</p></div>
+      <div class="slot"><p>COL1000 Lecture</p><p>15:00–16:00 @ LH108(This is for me guys, check your in given pdf)</p></div>
       <div class="slot"><p>MTL1001 Lecture</p><p>16:00–17:00 @ LH308</p></div>
     </div>
 
@@ -187,9 +187,9 @@
 
     <div class="day">
       <h2>Friday</h2>
-      <div class="slot"><p>COL1000 Lab</p><p>09:00–11:00 @ LH504</p></div>
+      <div class="slot"><p>COL1000 Lab</p><p>09:00–11:00 @ LH504(This is for me guys, check your in given pdf)</p></div>
       <div class="slot"><p>ELL1000 Tutorial</p><p>14:00–15:00 @ LH606</p></div>
-      <div class="slot"><p>COL1000 Lecture</p><p>15:00–16:00 @ LH108</p></div>
+      <div class="slot"><p>COL1000 Lecture</p><p>15:00–16:00 @ LH108(This is for me guys, check your in given pdf)</p></div>
       <div class="slot"><p>MTL1001 Lecture</p><p>16:00–17:00 @ LH308</p></div>
     </div>
 
